Finalización Capa de Presentación

--- a/ProyectoMancariBlue/Views/Animal/IndexG.cshtml
+++ b/ProyectoMancariBlue/Views/Animal/IndexG.cshtml
@@ -27,7 +27,7 @@
                                     Código
                                 </th>
                                 <th>
-                                    Genero
+                                    Género
                                 </th>
                                 <th>
                                     Peso (KG)
