--- a/ProyectoMancariBlue/Views/Animal/VerAnimalM.cshtml
+++ b/ProyectoMancariBlue/Views/Animal/VerAnimalM.cshtml
@@ -68,7 +68,7 @@
                                                     Código Padre
                                                 </th>
                                                 <th>
-                                                    Genero
+                                                    Género
                                                 </th>
                                                 <th>
                                                     Fecha Nacimiento
