--- a/ProyectoMancariBlue/Views/Animal/VerAnimalP.cshtml
+++ b/ProyectoMancariBlue/Views/Animal/VerAnimalP.cshtml
@@ -26,7 +26,7 @@
                             <input class="form-control" value="003" disabled />
                         </div>
                         <div class="form-group">
-                            <label class="control-label">Genero</label>
+                            <label class="control-label">Género</label>
                             <input class="form-control" value="Macho" disabled />
                         </div>
                         <div class="form-group">
@@ -68,7 +68,7 @@
                                                     Código Madre
                                                 </th>
                                                 <th>
-                                                    Genero
+                                                    Género
                                                 </th>
                                         <th>
                                             Fecha Nacimiento
