--- a/ProyectoMancariBlue/Views/Empleado/CrearAdministrador.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/CrearAdministrador.cshtml
@@ -33,21 +33,21 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label">Nombre</label>
-                            <input class="form-control" id="nombreInput" read/>
+                            <input class="form-control" id="nombreInput" disabled/>
                         </div>
                         <div class="form-group">
                             <label class="control-label">Apellidos</label>
-                            <input class="form-control" id="apellidosInput" />
+                            <input class="form-control" id="apellidosInput" disabled />
                         </div>     
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label class="control-label">Puesto</label>
-                            <input class="form-control" id="puestoInput" />
+                            <input class="form-control" id="puestoInput" disabled />
                         </div>
                         <div class="form-group">
                             <label class="control-label">Fecha Ingreso</label>
-                            <input class="form-control" id="fechaInput" />
+                            <input class="form-control" id="fechaInput" disabled />
                         </div>
                         <div class="form-group">
                             <label class="control-label">Rol</label>
