--- a/ProyectoMancariBlue/Views/Empleado/EditarEmpleado.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/EditarEmpleado.cshtml
@@ -23,28 +23,32 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="control-label">Cedula</label>
+                            <label class="control-label">Cédula</label>
                             <input class="form-control" value="1-1492-0416"  disabled />
 
                         </div>
                         <div class="form-group">
                             <label class="control-label">Nombre</label>
                             <input class="form-control" value="Josue" />
+                            <span class="text-danger">Campo requerido</span>
 
                         </div>
                         <div class="form-group">
                             <label class="control-label">Apellidos</label>
                             <input class="form-control" value="Rojas Chaves" />
+                            <span class="text-danger">Campo requerido</span>
  
                         </div>
                         <div class="form-group">
                             <label class="control-label">Nacionalidad</label>
                             <input class="form-control" value="Costarricense" />
+                            <span class="text-danger">Campo requerido</span>
 
                         </div>
                         <div class="form-group">
                             <label class="control-label">Correo</label>
                             <input class="form-control" value="svcrove@outlook.com" />
+                            <span class="text-danger">Campo requerido</span>
  
                         </div>
                         <div class="form-group">
@@ -57,21 +61,25 @@
                         <div class="form-group">
                             <label class="control-label">Provincia</label>
                             <input class="form-control" value="San Jose" />
+                            <span class="text-danger">Campo requerido</span>
 
                         </div>
                         <div class="form-group">
-                            <label class="control-label">Canton</label>
+                            <label class="control-label">Cantón</label>
                             <input class="form-control" value="Desamparados" />
+                            <span class="text-danger">Campo requerido</span>
    
                         </div>
                         <div class="form-group">
                             <label class="control-label">Distrito</label>
                             <input class="form-control" value="San Rafael Abajo" />
+                            <span class="text-danger">Campo requerido</span>
  
                         </div>
                         <div class="form-group">
                             <label class="control-label">Puesto</label>
                             <input class="form-control" value="Ganadero" />
+                            <span class="text-danger">Campo requerido</span>
 
                         </div>
                         <div class="form-group">
@@ -81,6 +89,7 @@
                         <div class="form-group">
                             <label class="control-label">Salario</label>
                             <input class="form-control" value="$1800" />
+                            <span class="text-danger">Campo requerido</span>
                         </div>
                         <div class="form-group">
                             <label class="control-label">Saldo Vacaciones</label>
