--- a/ProyectoMancariBlue/Views/Inventario/CrearProducto.cshtml
+++ b/ProyectoMancariBlue/Views/Inventario/CrearProducto.cshtml
@@ -42,10 +42,11 @@
                             <label class="control-label">Categoría</label>
                             <select class="form-control">
                                 <option value="">Seleccionar...</option>
-                                <option value="Desparacitante">Desparacitante</option>
+                                <option value="Desparacitante">Desparasitante</option>
                                 <option value="Analgésico">Analgésico</option>
                                 <option value="Sumplemento">Suplemento</option>
                             </select>
+                            <span class="text-danger">Campo requerido</span>
                         </div>
                         <div class="form-group">
                             <label class="control-label">Proveedor</label>
@@ -55,6 +56,7 @@
                                 <option value="Proveedor 2">Proveedor 2</option>
                                 <option value="Proveedor 3">Proveedor 3</option>
                             </select>
+                            <span class="text-danger">Campo requerido</span>
                         </div>
                         <div class="form-group">
                             <label class="control-label">Stock</label>
