--- a/ProyectoMancariBlue/Views/Inventario/Index.cshtml
+++ b/ProyectoMancariBlue/Views/Inventario/Index.cshtml
@@ -54,7 +54,7 @@
                                     Vacuna 1
                                 </td>
                                 <td>
-                                    Desparacitante
+                                    Desparasitante
                                 </td>
                                 <td>
                                     Vacuna para la desparacitación de ganador
