--- a/ProyectoMancariBlue/Views/Shared/LoginLayout.cshtml
+++ b/ProyectoMancariBlue/Views/Shared/LoginLayout.cshtml
@@ -15,9 +15,8 @@
                 <div class="cover"></div>
             </section>
             <section class="login-content">
-                <div class="logo">
-
-                    <h1>MANCARI BLUE</h1>
+                <div style="text-align: center;">
+                    <img src="~/img/Logo1.png" class="logo-image" width="200px" height="auto">
                 </div>
                 @RenderBody()
             </section>
