--- a/ProyectoMancariBlue/Views/Shared/_Layout.cshtml
+++ b/ProyectoMancariBlue/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
                     <span class="app-menu__label">Módulo Proveedores</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" asp-action="Index" asp-controller="Provedor">Proveedores</a>
+                    <a class="dropdown-item" asp-action="Index" asp-controller="Proveedor">Proveedores</a>
                 </div>
             </li>
             <li class="nav-item dropdown" id="dropdownMenu">
@@ -96,10 +96,10 @@
             <li class="nav-item dropdown" id="dropdownMenu">
                 <a class="app-menu__item dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="app-menu__icon fa fa-th-list"></i>
-                    <span class="app-menu__label">Módulo Administrativo</span>
+                    <span class="app-menu__label">Módulo Reportes</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" asp-action="Index" asp-controller="Administración">Administración</a>
+                    <a class="dropdown-item" asp-action="Index" asp-controller="Reporte">Reporetes</a>
                 </div>
             </li>
             <li class="nav-item dropdown" id="dropdownMenu">
