--- a/ProyectoMancariBlue/Views/Vacacion/CrearVacacion.cshtml
+++ b/ProyectoMancariBlue/Views/Vacacion/CrearVacacion.cshtml
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="control-label">Cedula</label>
+                            <label class="control-label">Cédula</label>
                             <select class="form-control" id="cedulaSelect" onchange="rellenarCampos()">
                                 <option value="">Seleccionar...</option>
                                 <option value="1-1492-4016">1-1492-0416</option>
