--- a/ProyectoMancariBlue/Views/Empleado/CrearEmpleado.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/CrearEmpleado.cshtml
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="control-label">Cedula</label>
+                            <label class="control-label">Cédula</label>
                             <input class="form-control" />
                             <span class="text-danger">Campo requerido</span>
                         </div>
@@ -59,7 +59,7 @@
                             <span class="text-danger">Campo requerido</span>
                         </div>
                         <div class="form-group">
-                            <label class="control-label">Canton</label>
+                            <label class="control-label">Cantón</label>
                             <input class="form-control" />
                             <span class="text-danger">Campo requerido</span>
                         </div>
