--- a/ProyectoMancariBlue/Views/Empleado/GenerarLiquidacion.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/GenerarLiquidacion.cshtml
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label class="control-label">Cedula</label>
+                        <label class="control-label">Cédula</label>
                         <input class="form-control" value="1-1492-0416" readonly />
                     </div>
                     <div class="form-group">
@@ -66,6 +66,7 @@
                             <option value="Renuncia">Renuncia</option>
                             <option value="Pension">Pension</option>
                         </select>
+                        <span class="text-danger">Campo requerido</span>
                     </div>
                     <div class="form-group">
                         <label class="control-label">Preaviso</label>
@@ -74,6 +75,7 @@
                             <option value="Si">Si</option>
                             <option value="No">No</option>
                         </select>
+                        <span class="text-danger">Campo requerido</span>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -84,10 +86,12 @@
                             <option value="Mensual">Mensual</option>
                             <option value="Quincenal">Quincenal</option>
                         </select>
+                        <span class="text-danger">Campo requerido</span>
                     </div>
                     <div class="form-group">
                         <label class="control-label">Fecha Salida</label>
                         <input type="date" class="form-control" />
+                        <span class="text-danger">Campo requerido</span>
                     </div>
                 </div>
             </div>
