--- a/ProyectoMancariBlue/Views/Empleado/VerEmpleado.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/VerEmpleado.cshtml
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label class="control-label">Cedula</label>
+                        <label class="control-label">Cédula</label>
                         <input class="form-control" value="1-1492-0416" readonly />
                     </div>
                     <div class="form-group">
@@ -50,7 +50,7 @@
                         <input class="form-control" value="San Jose" readonly />
                     </div>
                     <div class="form-group">
-                        <label class="control-label">Canton</label>
+                        <label class="control-label">Cantón</label>
                         <input class="form-control" value="Desamparados" readonly />
                     </div>
                     <div class="form-group">
