--- a/ProyectoMancariBlue/Views/Reporte/Index.cshtml
+++ b/ProyectoMancariBlue/Views/Reporte/Index.cshtml
@@ -1,17 +1,24 @@
 ﻿@{
-    ViewData["Title"] = "Animales";
+    ViewData["Title"] = "Reportes";
 }
+@functions {
+    string NombreCompleto(string n, string a)
+    {
+        return n + " " + a;
 
+    }
+
+}
 <div class="app-title">
     <div>
-        <h1><i class="fa fa-th-list" style="margin-right: 10px;"></i>Administración de Animales</h1>
-        <p>Animales</p>
+        <h1><i class="fa fa-th-list" style="margin-right: 10px;"></i>Administración de Reportes</h1>
+        <p>Reportes</p>
         <br>
-        <a asp-action="CrearAnimal" asp-controller="Animal" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i>Crear Animal</a>
+        <a asp-action="CrearReporte" asp-controller="Reporte" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i>Crear Reporte</a>
     </div>
     <ul class="app-breadcrumb breadcrumb side">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
-        <li class="breadcrumb-item">Animales</li>
+        <li class="breadcrumb-item">Reportes</li>
     </ul>
 </div>
 <div class="row" style="flex-direction:column">
@@ -19,29 +26,29 @@
         <div class="tile">
             <div class="tile-body">
                 <div class="table-responsive">
-                    <table class="table table-hover table-bordered" id="tanimales">
+                    <table class="table table-hover table-bordered" id="treportes">
                         <thead>
                             <tr>
                                 <th>
-                                    Código
+                                    Código CVO
                                 </th>
                                 <th>
-                                   Madre
+                                    Código Transporte
                                 </th>
                                 <th>
-                                    Padre
+                                   Transacción
                                 </th>
                                 <th>
-                                  Género
+                                    Identificación
                                 </th>
                                 <th>
-                                    Peso (KG)
+                                    Nombre Cliente
                                 </th>
                                 <th>
-                                  Raza
+                                   Ganado
                                 </th>
                                 <th>
-                                    Vacunación
+                                   Fecha Venta
                                 </th>
                                 <th>
                                     Acciones
@@ -51,31 +58,56 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    0003
+                                    CVO-001
                                 </td>
                                 <td>
-                                    0001
+                                    TR00-1
                                 </td>
                                 <td>
-                                    0002
+                                   001-T
                                 </td>
                                 <td>
-                                    Hembra
+                                    3-12321-2323
                                 </td>
                                 <td>
-                                   86
+                                    Cliente 1
                                 </td>
                                 <td>
-                                    Raza 1
-                                </td>
-                                <td style="text-align:center">
-                                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                                    001
                                 </td>
                                 <td>
-                                    <a class="btn btn-primary" asp-action="EditarAnimal" asp-controller="Animal">Editar</a>
-                                    <a class="btn btn-info" asp-action="VerAnimal" sp-controller="Animal">Detalle</a>
-                                    <a class="btn btn-danger cambiar-estado-btn" href="#">Cambiar Estado</a>
-
+                                  04/01/2024
+                                </td>
+                                <td>
+                                    <a class="btn btn-primary" asp-action="EditarReporte" asp-controller="Reporte">Editar</a>
+                                    <a class="btn btn-info" asp-action="VerReporte" asp-controller="Reporte">Detalle</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    CVO-002
+                                </td>
+                                <td>
+                                    TR00-2
+                                </td>
+                                <td>
+                                    002-T
+                                </td>
+                                <td>
+                                    3-12321-2323
+                                </td>
+                                <td>
+                                    Cliente 2
+                                </td>
+                                <td>
+                                    002
+                                </td>
+                                <td>
+                                    15/01/2024
+                                </td>
+                                <td>
+                                    <a class="btn btn-primary" asp-action="EditarReporte" asp-controller="Reporte">Editar</a>
+                                    <a class="btn btn-info" asp-action="VerReporte" asp-controller="Reporte">Detalle</a>
                                 </td>
                             </tr>
                         </tbody>
@@ -89,7 +121,7 @@
 @section Scripts {
     <script src="~/js/plugins/jquery.datatables.min.js"></script>
     <script src="~/js/plugins/datatables.bootstrap.min.js"></script>
-    <script type="text/javascript">$('#tanimales').DataTable();</script>
+    <script type="text/javascript">$('#treportes').DataTable();</script>
     <script>
 
         $(document).ready(function () {
@@ -110,7 +142,7 @@
                     if (result.isConfirmed) {
                         // Realizar la llamada AJAX si se confirma la acción
                         $.ajax({
-                            url: '@Url.Action("Index", "Animal")',
+                            url: '@Url.Action("Index", "Empleado")',
                             type: 'GET',
                             success: function (response) {
                                 // Mostrar mensaje de éxito con SweetAlert2
