--- a/ProyectoMancariBlue/Views/Transaccion/Index.cshtml
+++ b/ProyectoMancariBlue/Views/Transaccion/Index.cshtml
@@ -1,5 +1,311 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Transacciones";
+}
+@functions {
+    string NombreCompleto(string n, string a)
+    {
+        return n + " " + a;
+
+    }
+
+}
+<div class="app-title">
+    <div>
+        <h1><i class="fa fa-th-list" style="margin-right: 10px;"></i>Administración de Transaccion</h1>
+        <p>Transacciones</p>
+        <br>
+        <a asp-action="CrearTransaccionC" asp-controller="Transaccion" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i>Crear Transaccion de Compra</a>      <a asp-action="CrearTransaccionV" asp-controller="Transaccion" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i>Crear Transaccion de Venta</a>
+    </div>
+    <ul class="app-breadcrumb breadcrumb side">
+        <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
+        <li class="breadcrumb-item">Transacciones</li>
+    </ul>
+</div>
+<div class="row" style="flex-direction:column">
+    <div class="col-md-14">
+        <div class="tile">
+            <h4>Transacciones de Compra</h4>
+            <div class="tile-body">
+                <div class="table-responsive">
+                    <table class="table table-hover table-bordered" id="ttransaccionc">
+                        <thead>
+                            <tr>
+                                <th>
+                                    Código
+                                </th>
+                                <th>
+                                    Proveedor
+                                </th>
+                                <th>
+                                    Categoría
+                                </th>
+                                <th>
+                                    Descripción
+                                </th>
+                                <th>
+                                    Fecha
+                                </th>
+                                <th>
+                                    Importe
+                                </th>
+                                <th>
+                                    Acciones
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    2014A18
+                                </td>
+                                <td>
+                                    Proveedor 1
+                                </td>
+
+                                <td>
+                                    Categoría 1
+                                </td>
+                                <td>
+                                    Compra de Producto 1
+                                </td>
+                                <td>
+                                    01/04/2024
+                                </td>
+                                <td>
+                                    ₡123.0000
+                                </td>
+                                <td>
+                                    <a class="btn btn-primary" asp-action="EditarTransaccionC" asp-controller="Transaccion">Editar</a>
+                                    <a class="btn btn-info" asp-action="VerTransaccionC" sp-controller="Transaccion">Detalle</a>
+                                    <a class="btn btn-danger cambiar-estado-btn" href="#">Anular</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    2014A18
+                                </td>
+                                <td>
+                                    Proveedor 2
+                                </td>
+
+                                <td>
+                                    Categoría 2
+                                </td>
+                                <td>
+                                    Compra de Producto 2
+                                </td>
+                                <td>
+                                    20/04/2024
+                                </td>
+                                <td>
+                                    ₡235.0000
+                                </td>
+                                <td>
+                                    <a class="btn btn-primary" asp-action="EditarTransaccionC" asp-controller="Transaccion">Editar</a>
+                                    <a class="btn btn-info" asp-action="VerTransaccionC" sp-controller="Transaccion">Detalle</a>
+                                    <a class="btn btn-danger cambiar-estado-btn" href="#">Anular</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    2014A18
+                                </td>
+                                <td>
+                                    Proveedor 3
+                                </td>
+
+                                <td>
+                                    Categoría 3
+                                </td>
+                                <td>
+                                    Compra de Producto 1
+                                </td>
+                                <td>
+                                    15/04/2024
+                                </td>
+                                <td>
+                                    ₡342.0000
+                                </td>
+                                <td>
+                                    <a class="btn btn-primary" asp-action="EditarTransaccionC" asp-controller="Transaccion">Editar</a>
+                                    <a class="btn btn-info" asp-action="VerTransaccionC" sp-controller="Transaccion">Detalle</a>
+                                    <a class="btn btn-danger cambiar-estado-btn" href="#">Anular</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row" style="flex-direction:column">
+    <div class="col-md-14">
+        <div class="tile">
+            <h4>Transacciones de Venta</h4>
+            <div class="tile-body">
+                <div class="table-responsive">
+                    <table class="table table-hover table-bordered" id="ttransaccionv">
+                        <thead>
+                            <tr>
+                                <th>
+                                    Código
+                                </th>
+                                <th>
+                                    Identificación
+                                </th>
+                                <th>
+                                    Cliente
+                                </th>
+                                <th>
+                                    Descripción
+                                </th>
+                                <th>
+                                    Fecha
+                                </th>
+                                <th>
+                                    Importe
+                                </th>
+                                <th>
+                                    Acciones
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    002-C
+                                </td>
+                                <td>
+                                    1-1492-0416
+                                </td>
+                                <td>
+                                    Cliente 1
+                                </td>
+                                <td>
+                                    Venta de Ganado 001
+                                </td>
+                                <td>
+                                    01/04/2024
+                                </td>
+                                <td>
+                                    ₡123.0000
+                                </td>
+                                <td>
+                                    <a class="btn btn-primary" asp-action="EditarTransaccionV" asp-controller="Transaccion">Editar</a>
+                                    <a class="btn btn-info" asp-action="VerTransaccionV" sp-controller="Transaccion">Detalle</a>
+                                    <a class="btn btn-danger cambiar-estado-btn" href="#">Anular</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    003-C
+                                </td>
+                                <td>
+                                    1-1492-0416
+                                </td>
+                                <td>
+                                    Cliente 2
+                                </td>
+                                <td>
+                                    Venta de Ganado 002
+                                </td>
+                                <td>
+                                    20/04/2024
+                                </td>
+                                <td>
+                                    ₡233.0000
+                                </td>
+                                <td>
+                                    <a class="btn btn-primary" asp-action="EditarTransaccionV" asp-controller="Transaccion">Editar</a>
+                                    <a class="btn btn-info" asp-action="VerTransaccionV" sp-controller="Transaccion">Detalle</a>
+                                    <a class="btn btn-danger cambiar-estado-btn" href="#">Anular</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    004-C
+                                </td>
+                                <td>
+                                    1-1492-0416
+                                </td>
+                                <td>
+                                    Cliente 3
+                                </td>
+                                <td>
+                                    Venta de Ganado 003
+                                </td>
+                                <td>
+                                    20/03/2024
+                                </td>
+                                <td>
+                                    ₡98.0000
+                                </td>
+                                <td>
+                                    <a class="btn btn-primary" asp-action="EditarTransaccionV" asp-controller="Transaccion">Editar</a>
+                                    <a class="btn btn-info" asp-action="VerTransaccionV" sp-controller="Transaccion">Detalle</a>
+                                    <a class="btn btn-danger cambiar-estado-btn" href="#">Anular</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@section Scripts {
+    <script src="~/js/plugins/jquery.datatables.min.js"></script>
+    <script src="~/js/plugins/datatables.bootstrap.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#ttransaccionc').DataTable();
+            $('#ttransaccionv').DataTable(); // Inicializa el DataTable para el nuevo ID
+        });
+    </script>
+    <script>
+
+        $(document).ready(function () {
+            $('.cambiar-estado-btn').click(function (e) {
+                e.preventDefault();
+
+                var id = $(this).data('id');
+
+                // Mostrar confirmación con SweetAlert2
+                Swal.fire({
+                    title: 'Confirmación',
+                    text: '¿Estás seguro de que deseas anular la transacción?',
+                    icon: 'question',
+                    showCancelButton: true,
+                    confirmButtonText: 'Sí',
+                    cancelButtonText: 'No'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        // Realizar la llamada AJAX si se confirma la acción
+                        $.ajax({
+                            url: '@Url.Action("Index", "Transaccion")',
+                            type: 'GET',
+                            success: function (response) {
+                                // Mostrar mensaje de éxito con SweetAlert2
+                                Swal.fire('Éxito', 'La Transacción ha sido anulada.', 'success').then(function () {
+                                    // Recargar la página
+                                    location.reload();
+                                });
+                            },
+                            error: function (xhr, status, error) {
+                                // Mostrar mensaje de error con SweetAlert2
+                                Swal.fire('Error', 'Ha ocurrido un error al anular la transacción.', 'error');
+                                console.error('Error:', error);
+                            }
+                        });
+                    }
+                });
+            });
+        });
+
+    </script>
+
 }
