--- a/ProyectoMancariBlue/Views/Vacacion/EditarVacacion.cshtml
+++ b/ProyectoMancariBlue/Views/Vacacion/EditarVacacion.cshtml
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="control-label">Cedula</label>
+                            <label class="control-label">Cédula</label>
                             <input class="form-control" value="1-1492-0416" disabled />
                         </div>
                         <div class="form-group">
