--- a/ProyectoMancariBlue/Views/Vacacion/VerVacacion.cshtml
+++ b/ProyectoMancariBlue/Views/Vacacion/VerVacacion.cshtml
@@ -20,7 +20,7 @@
             <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label class="control-label">Cedula</label>
+                    <label class="control-label">Cédula</label>
                     <input class="form-control" value="1-1492-0416" readonly />
                 </div>
                 <div class="form-group">
