--- a/ProyectoMancariBlue/Views/Vacuna/CrearVacuna.cshtml
+++ b/ProyectoMancariBlue/Views/Vacuna/CrearVacuna.cshtml
@@ -32,7 +32,7 @@
                             <span class="text-danger">Campo requerido</span>
                         </div>
                         <div class="form-group">
-                            <label class="control-label">Genero</label>
+                            <label class="control-label">Género</label>
                             <input class="form-control" id="generoInput" />
                             <span class="text-danger">Campo requerido</span>
                         </div>
