--- a/ProyectoMancariBlue/Views/Vacuna/EditarVacuna.cshtml
+++ b/ProyectoMancariBlue/Views/Vacuna/EditarVacuna.cshtml
@@ -22,7 +22,7 @@
                 <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label">Codigo Animal</label>
+                                <label class="control-label">Código Animal</label>
                                 <input class="form-control" value="001" readonly />
                             </div>
                         <div class="form-group">
